--- a/app/blocks/notification/notification.scss
+++ b/app/blocks/notification/notification.scss
@@ -2727,7 +2727,7 @@
       }
     }
 
-    b {
+    b, strong {
       color: $color-confirm;
     }
 
@@ -3122,7 +3122,7 @@
       text-align: center;
     }
 
-    b {
+    b, strong {
       font-weight: 700;
     }
 
@@ -3660,7 +3660,7 @@
         }
       }
 
-      b {
+      b, strong {
         font-weight: 700;
       }
 
