--- a/app/blocks/state/state.scss
+++ b/app/blocks/state/state.scss
@@ -31,7 +31,7 @@
     }
   }
 
-  b {
+  b, strong {
     font-weight: 700;
 
     @include screen('sm') {
@@ -163,7 +163,7 @@
       color: $color-state-light;
     }
 
-    b {
+    b, strong {
       color: $color-white;
     }
   }
