--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -273,6 +273,7 @@ include ../components/popup-payment-summary/popup-payment-summary
 include ../components/popup-reminder-empty/popup-reminder-empty
 include ../components/popup-reminder-save/popup-reminder-save
 include ../components/popup-signin/popup-signin
+include ../components/popup-standart/popup-standart
 include ../components/popup-subscribe/popup-subscribe
 include ../components/popup-success/popup-success
 include ../components/popup-warning/popup-warning
