--- a/app/blocks/note/note.scss
+++ b/app/blocks/note/note.scss
@@ -77,7 +77,7 @@
       font-weight: 700;
     }
 
-    b {
+    b, strong {
       font-weight: 700;
     }
 
@@ -103,7 +103,7 @@
       }
 
       &__text {
-        b {
+        b, strong {
           color: $color-hot-desk;
         }
       }
@@ -117,7 +117,7 @@
         }
 
         &__text {
-          b {
+          b, strong {
             color: $color-note-green;
           }
         }
@@ -131,7 +131,7 @@
         }
 
         &__text {
-          b {
+          b, strong {
             color: #f2b412;
           }
         }
