--- a/app/blocks/filter-tag/filter-tag.scss
+++ b/app/blocks/filter-tag/filter-tag.scss
@@ -14,6 +14,7 @@
   flex: none;
   letter-spacing: -.02em;
   white-space: nowrap;
+  scroll-snap-align: start start;
 
   @include screen('xlg', max, 2) {
     font-size: pxtovw(12, 1660);
