--- a/app/blocks/filter-tags/filter-tags.scss
+++ b/app/blocks/filter-tags/filter-tags.scss
@@ -6,5 +6,17 @@
   align-items: center;
   box-sizing: border-box;
   width: auto;
+  max-width: 35vw;
   height: 100%;
+  overflow: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+
+  @include rule(scroll-padding, (xl: 8px, xlg: 8, lg: 8, md: 8, sm: 8));
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
