add _setFilterValues method for SearchFilters

--- a/app/components/side-navigation/nd-side-navigation.scss
+++ b/app/components/side-navigation/nd-side-navigation.scss
@@ -232,6 +232,7 @@
   }
 
   &__link {
+    position: relative;
     display: inline-block;
     font-size: 20px;
     line-height: 1;
@@ -312,6 +313,26 @@
         }
       }
     }
+  }
+
+  &__marker {
+    @include rule(font-size, (xl: 10px, xlg: 10, lg: 10, md: 10, sm: 10));
+    @include rule(line-height, (xl: 10px, xlg: 10, lg: 10, md: 10, sm: 10));
+    @include rule(width, (xl: 14px, xlg: 14, lg: 14, md: 14, sm: 14));
+    @include rule(padding-top, (xl: 2px, xlg: 2, lg: 2, md: 2, sm: 2));
+    @include rule(margin-left, (xl: 2px, xlg: 2, lg: 2, md: 2, sm: 2));
+    @include rule(padding-bottom, (xl: 2px, xlg: 2, lg: 2, md: 2, sm: 2));
+
+    font-weight: 700;
+    color: $nd-color-basic-light;
+    background-color: $nd-color-fixeddesk;
+    border-radius: 50%;
+    box-sizing: border-box;
+    text-align: center;
+    display: inline-block;
+    position: absolute;
+    left: 100%;
+    top: 0;
   }
 
   &__subitem {
