fix for search-panel buttons

--- a/app/components/search-panel/search-panel.scss
+++ b/app/components/search-panel/search-panel.scss
@@ -141,7 +141,7 @@
         flex-wrap: nowrap;
         align-items: flex-start;
         background-color: $nd-color-basic-light;
-        overflow-x: auto;
+        overflow: auto;
         box-sizing: border-box;
         padding: 0 pxtovw(20, 375) pxtovw(88, 375);
       }
@@ -486,6 +486,7 @@
 
       @include screen('sm', max, 2) {
         margin-top: 0;
+        margin-bottom: auto;
       }
     }
   }
@@ -783,12 +784,13 @@
     @include screen('sm', max, 2) {
       margin: pxtovw(37, 375) 0 0;
       width: 100%;
-      flex-direction: column;
-      justify-content: flex-end;
-      align-items: flex-start;
+      display: block;
+      // flex-direction: column;
+      // justify-content: flex-end;
+      // align-items: flex-start;
       order: 2;
       flex-wrap: nowrap;
-      flex: 1;
+      // flex: 1;
     }
   }
 
