--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -74,6 +74,7 @@ include ../blocks/gradients/gradients-redesign
 include ../blocks/grid/grid
 include ../blocks/header-menu/header-menu
 include ../blocks/header-menu/nd-header-menu
+include ../blocks/header-panel/header-panel
 include ../blocks/header-user/header-user
 include ../blocks/header-user/nd-header-user
 include ../blocks/heading/heading
@@ -146,6 +147,7 @@ include ../blocks/promo-section/promo-section
 include ../blocks/promo-slider/promo-slider
 include ../blocks/put-block-into-slot/put-block-into-slot
 include ../blocks/rating/rating
+include ../blocks/reg-grid/reg-grid
 include ../blocks/request-info/request-info
 include ../blocks/request-status/request-status
 include ../blocks/request-type/request-type
@@ -282,6 +284,8 @@ include ../components/progress-scale/progress-scale
 include ../components/promo/promo
 include ../components/records/records
 include ../components/registration-form/registration-form
+include ../components/registration-form/registration-form-new
+include ../components/registration-form/registration-form-shorts
 include ../components/reservation-request/reservation-request
 include ../components/reservation-request/reservation-request-popup
 include ../components/results/results
