--- a/app/pages/ui-kit/nd-ui-kit.pug
+++ b/app/pages/ui-kit/nd-ui-kit.pug
@@ -341,6 +341,71 @@ block content
         +ui-description .is-strong
         +password-indicator().is-strong Password stregth
 
+    //- Text block
+    +ui-section
+      +ui-section-head
+        h2 Text block
+        p Блок: block/text-block
+      +ui-section-content()
+        +ui-description .text-block
+          +text-block
+            +text-block-image('assets/images/nd/il-envelope.svg')
+            +e.title Title 43px <i>tag i</i>
+            +e.title_fz30 Title 30px (.text-block__title_fz30)
+            +e.title_fz20 Title 20px (.text-block__title_fz20)
+            +e.content Content 17px <a href="#">Link in text</a>
+            +e.content_fz18 Content 18px (.text-block__content_fz18)
+            +e.content_fz15 Content 15px (.text-block__content_fz15)
+            +e.content_mt20 Content (.text-block__content_mt20)
+            +e.content_fw500 Content (.text-block__content_fw500)
+            +e.content
+              p Links .text-block__links
+              +e.links
+                +nd-link().__link(href="#") Link
+                +nd-link().__link_fz16(href="#") Link 16px (.text-block__link_fz16)
+                +nd-link().__link_bold(href="#") Link bold (.text-block__link_bold)
+                +nd-link().__link_stolzl(href="#") Link stolzl family (.text-block__link_stolzl)
+              p Buttons .text-block__buttons
+              +e.buttons
+                +nd-button.__button(href="#") Button
+        +ui-description .text-block_tac
+          +text-block._tac
+            +text-block-image('assets/images/nd/space1.jpg')
+            +e.title Title
+            +e.content Content
+            +e.content
+              p Links .text-block__links
+              +e.links
+                +nd-link().__link(href="#") Link
+              p Buttons .text-block__buttons
+              +e.buttons
+                +nd-button.__button(href="#") Button
+        +ui-description .text-block_empty
+          +text-block._empty
+            +e.title Title
+            +e.content Content
+            +text-block-image('assets/images/nd/il-envelope.svg')
+            +e.content
+              p Links .text-block__links
+              +e.links
+                +nd-link().__link(href="#") Link
+              p Buttons .text-block__buttons
+              +e.buttons
+                +nd-button.__button(href="#") Button
+        +ui-description .text-block_gray
+          +text-block._gray
+            +e.title Title
+            +text-block-image('assets/images/nd/space1.jpg')
+            +e.content Content
+            +e.content
+              p Links .text-block__links
+              +e.links
+                +nd-link().__link(href="#") Link
+              p Buttons .text-block__buttons
+              +e.buttons
+                +nd-button.__button(href="#") Button
+
+
 block panels
 
 block popups
